--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,24 @@
+# ----- Stage 1: Build the React App -----
 FROM node:18-alpine AS build
 
 WORKDIR /app
 
-COPY package.json ./
-COPY package-lock.json ./
-
+COPY package*.json ./
 RUN npm install
 
 COPY . .
 
 RUN npm run build
 
+
+# ----- Stage 2: Serve the App with Nginx -----
 FROM nginx:1.25-alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx.conf /etc/nginx/conf.d/
 
 EXPOSE 80
 
